--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "webpack-dev-server --config webpack.dev.js",
     "start-other": "webpack serve",
     "watch": "webpack --watch",
-    "build": "webpack --config webpack.config.js",
+    "build": "webpack --config webpack.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,30 +15,38 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.15.0",
+    "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "autoprefixer": "^10.3.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^6.2.0",
     "express": "^4.17.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
+    "mini-css-extract-plugin": "^2.2.0",
     "postcss": "^8.3.6",
     "postcss-loader": "^6.1.1",
     "postcss-preset-env": "^6.7.0",
     "postcss-pxtorem": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-refresh": "^0.10.0",
     "style-loader": "^3.2.1",
     "vue": "^2.6.14",
     "vue-loader": "^15.9.6",
     "vue-loader-plugin": "^1.3.0",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^5.48.0",
-    "webpack-cli": "^4.5.0",
+    "webpack": "^5.51.1",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-middleware": "^5.0.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "@babel/preset-env": "^7.15.0",
